--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.11.0",
+    "tailwindcss": "^1.8.10"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "autoprefixer": "^10.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "tailwindcss-textshadow": "^2.1.3",
+    "typescript": "^4.0.3"
   }
 }
