--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
+    "react-query": "^2.23.0",
     "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@types/react": "^16.9.49",
     "autoprefixer": "^10.0.0",
     "postcss-preset-env": "^6.7.0",
+    "react-query-devtools": "^2.5.1",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "tailwindcss-textshadow": "^2.1.3",
